--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,7 @@ ul{
     width: 80%;
     margin-top: 2rem;
     margin-bottom: 2rem;
+    padding: 0;  
 }
 li{
     padding-bottom: 1rem;
@@ -65,10 +66,10 @@ a{
     padding: 15rem;
 }
 h1{
-    font-size: 1.618rem;
+    font-size: 3rem;
     font-family: 'Crimson Text', serif;
-    text-align: center;
     color: #FDFEFF;
+    margin-left: -10%;
 }
 h2{
     font-size: 1.618rem;
@@ -163,8 +164,8 @@ label{
 }
 .result{
     padding-left: 10%;
-    font-size: 1rem;
-    margin-top: 3rem;
+    font-size: 1.5rem;
+    margin-top: 3rem;  
 }
 
 
@@ -182,7 +183,9 @@ label{
         padding-right: 0;
     }
     h1{
-        font-size: 1rem;
+        font-size: 1.5rem;
+        text-align: center;
+        margin: auto;
     }
     ul{
         text-align: center;
